--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
             </ul>
             <ul class="social-items">
                 <li><a href="https://www.linkedin.com/in/sgailu/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#contact-link"><i class="fa fa-file"></i></a></li>
-                <li><a href="#contact-link"><i class="fa fa-github"></i></a></li>
+               <li>
+            <a href="CV-web-dev-03-2023.pdf" target="_blank"
+              ><i class="fa fa-file"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/sanicodeplayground" target="_blank"
+              ><i class="fa fa-github"></i
+            ></a>
+          </li>
             </ul>
         </nav>
     </header>
